--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "client": "cd client && yarn run dev",
-    "server": "cd server && yarn start"
+    "server": "cd server && yarn start",
+    "dev": "concurrently \"yarn run server\"  \"yarn run client\""
   },
   "keywords": [],
   "author": "",
